# GeometryPlot

./: CMakeLists.txt
docs/html/: _circle_8cpp.html  _circle_8cpp_source.html  _circle_8h.html  _circle_8h_source.html  _closed_shape_8cpp.html  _closed_shape_8cpp_source.html  _closed_shape_8h.html  _closed_shape_8h_source.html  _constants_8h.html  _constants_8h_source.html  _i_shape_8h.html  _i_shape_8h_source.html  _i_writer_8h.html  _i_writer_8h_source.html  _line_8cpp.html  _line_8cpp_source.html  _line_8h.html  _line_8h_source.html  _parametric_writer_8cpp.html  _parametric_writer_8cpp_source.html  _parametric_writer_8h.html  _parametric_writer_8h_source.html  _point_8cpp.html  _point_8cpp_source.html  _point_8h.html  _point_8h_source.html  _polygon_8cpp.html  _polygon_8cpp_source.html  _polygon_8h.html  _polygon_8h_source.html  _print_point_8cpp.html  _print_point_8cpp_source.html  _print_point_8h.html  _print_point_8h_source.html  _r_e_a_d_m_e_8md.html  _s_t_l_writer_8cpp.html  _s_t_l_writer_8cpp_source.html  _s_t_l_writer_8h.html  _s_t_l_writer_8h_source.html  _simple_shape_8cpp.html  (+75 more)
scripts/: sketch
src/: shared_EXPORTS.h
src/core/: Circle.cpp  Circle.h  ClosedShape.cpp  ClosedShape.h  Constants.h  IShape.h  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  SimpleShape.cpp  SimpleShape.h  Spline.cpp  Spline.h  Triangle.cpp  Triangle.h  Triangulation.cpp  Triangulation.h  splineInternal.cpp  splineInternal.h
src/sketcher/: main.cpp
src/writer/: IWriter.h  ParametricWriter.cpp  ParametricWriter.h  PrintPoint.cpp  PrintPoint.h  STLWriter.cpp  STLWriter.h  TextWriter.cpp  TextWriter.h
(+49 files in other folders)
